--- a/elements.html
+++ b/elements.html
@@ -266,10 +266,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall">
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+												<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
 											</div>
 											<div class="col-6 col-12-xsmall">
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
+												<input type="password" name="demo-password" id="demo-password" value="" />
 											</div>
 											<div class="col-12">
 												<select name="demo-category" id="demo-category">
