--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									//<h2>Sed ipsum dolor</h2>
-									//<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Sed ipsum dolor</h2>
+									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -106,48 +106,61 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Where do you want to go?</h2>
+							<h2>Get in touch</h2>
+							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<div class="split style1">
 								<section>
 									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-4 col-12-xsmall">
-												<label for="departure">From:</label>
-												<input type="text" name="departure" id="departure" />
+										<div class="fields">
+											<div class="field half">
+												<label for="name">Name</label>
+												<input type="text" name="name" id="name" />
 											</div>
-											<div class="col-4">
-												<label for="destination">To:</label>
-												<input type="text" name="destination" id="destination" />
+											<div class="field half">
+												<label for="email">Email</label>
+												<input type="text" name="email" id="email" />
 											</div>
-											<div class="col-2">
-												<input type="radio" id="one-way" name="Type" value="one-way">
-												<label for="one-way">One-way</label>
-												<input type="radio" id="round-trip" name="Type" value="round-trip">
-												<label for="round-trip">Round-trip</label><br>
+											<div class="field">
+												<label for="message">Message</label>
+												<textarea name="message" id="message" rows="5"></textarea>
 											</div>
-										</div>
-										<div class="row gtr-uniform">
-											<div class="col-7">
-												<label for="Number">Number of Passengers:</label>
-												<input type="number" id="Number" name="number" value="Number">
-											</div>
-										</div>
-										<div class="row gtr-uniform">
-										<div class="col-5">
-											<label for="Depart on">Depart on:</label>
-											<input type="date" id="Depart on" name="date" value="Departure date">
-
-										</div>
-										<div class="col-5">
-											<label for="Arrive on">Arrive on:</label>
-											<input type="date" id="Arrive on" name="date" value="Arriving date">
-
-										</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Search</a></li>
+											<li><a href="" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
+								<section>
+									<ul class="contact">
+										<li>
+											<h3>Address</h3>
+											<span>12345 Somewhere Road #654<br />
+											Nashville, TN 00000-0000<br />
+											USA</span>
+										</li>
+										<li>
+											<h3>Email</h3>
+											<a href="#">user@untitled.tld</a>
+										</li>
+										<li>
+											<h3>Phone</h3>
+											<span>(000) 000-0000</span>
+										</li>
+										<li>
+											<h3>Social</h3>
+											<ul class="icons">
+												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+											</ul>
+										</li>
+									</ul>
+								</section>
+							</div>
+						</div>
+					</section>
 
 			</div>
 
