--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>FlyingWheelchair.com</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 							<li><a href="#intro">HOME</a></li>
 							<li><a href="#create">CREATE ACCOUNT</a></li>
 							<li><a href="#signin">SIGN IN</a></li>
-							<li><a href="#three">ABOUT US</a></li>
+							<li><a href="#about">ABOUT US</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -86,16 +86,20 @@
 				<!-- Two -->
 					<section id="signin" class="wrapper style3 fullscreen fade-up">
 						<div class="inner">
-							<h2>Sign in to your account</h2>
+							<h2>Connect your account to book with <img style="vertical-align: middle; height: 50px;" src="images/expedia.svg"></h2>
 							<form method="post" action="#">
 								<div class="row gtr-uniform">
 									<div class="col-6 col-12-xsmall">
 										<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
 									</div>
 									<div class="col-6 col-12-xsmall">
-										<input type="password" name="demo-password" id="demo-password" value="" />
+										<input type="password" name="demo-password" id="demo-password" value="" placeholder="password" />
 									</div>
 								</div>
+											<div class="col-12">
+												<input type="checkbox" id="demo-human" name="demo-human" checked="">
+												<label for="demo-human">I consent to sharing my personal information with Expedia.com</label>
+											</div>
 							</form>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">SIGN IN</a></li>
@@ -104,61 +108,21 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
+					<section id="about" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
-									</ul>
-								</section>
-							</div>
+							<h1 class="major">About Us</h1>
+							<h3>Who are we?</h3>
+							<p>Flyingwheelchair.com is a personalized flight search and booking platform dedicated to travelers with mobility devices that focuses on their individual accessibility needs.</p>
+							<p>We are travel accessibility and technology experts on a mission to empower everyone to fly without limits.</p>
+							<h3>What is our goal?</h3>
+							<p>Our goal is to deliver an unparalleled, user-centric booking process as well as a friction-less travel experience.</p>
+							<p>Our dream is to allow millions of wheelchair users to book flights with confidence.</p>
+							<h3>How we do it?</h3>
+								<ul>
+									<li>We capture and understand travelers' accessibility needs. In just a few clicks you will create your detailed profile. Promised, you won't need to do it again, ever.</li>
+									<li>We leverage the new NDC standard to connect directly with airlines, gathering the right information and communicating your needs. Be assured that they know about YOU.</li>
+									<li>We aggregate a unique set of external data sources. Because you have the right to make an informed decision.</li>
+								</ul>
 						</div>
 					</section>
 
@@ -168,7 +132,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; flyingwheelchair.com. All rights reserved.</li><li>Powered by<a href="https://gowheeltheworld.com">Wheel the World, Inc., Thibaud Labarre and Anna Gladyo</a></li>
 					</ul>
 				</div>
 			</footer>
